<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Barobot</string>
    <string name="do_update">Update drinks database</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="button_scan">Scanning for nearbly devices</string>
    <string name="about_info">Authors</string>
    <string name="title_activity_about">About the program</string>
    <string name="title_activity_device_list">Barobot</string>
    <string name="title_section1">Options</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">Lights</string>
    <string name="title_section4">Bottles</string>
    <string name="title_section5">Sounds</string>
    <string name="title_section6">History</string>
    <string name="empty_slot"></string>
    <string name="liquid_select_title">Select liquid</string>
    <string name="liquid_name">Liquid Name (Brand)</string>
    <string name="liquid_type">Liquid Type</string>
    <string name="title_activity_barobot_main">Barobot Main</string>
    <string name="title_activity_bottle_setup">Bottle Setup</string>
    <string name="title_activity_recipe_setup">Recipe Setup</string>

    <!-- Main -->
    <string name="glass_reminder_title">Reminder</string>
    <string name="glass_reminder_message">Place glass with ice onto the tray and click START</string>
    <string name="glass_reminder_button_ok">OK</string>
    <string name="glass_reminder_button_cancel">Cancel</string>
    <!-- Bottle Setup -->
    <string name="empty_bottle_string"></string>

    <!-- Dialog new Type -->
    <string name="dialog_type_name">Liquid type</string>

    <!-- Dialog new Liquid -->
    <string name="dialog_liquid_name">Liquid name (brand)</string>
    <string name="dialog_liquid_type">Liquid type</string>

    <!-- Dialog new Product -->
    <string name="dialog_product_capacity">Bottle capacity</string>
    <string name="dialog_product_name">Product name</string>

    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_main">Make a drink</string>
    <string name="action_bottle_setup">Setup bottles</string>
    <string name="action_recipe_setup">Customize Recipes</string>
    <string name="action_creator">Create</string>
    <string name="action_creator_drink_too_big">Ingredient was not added because of glass capacity.</string>
    <string name="action_creator_drink_too_big_ok">Ok</string>
    <string name="menu_favorite">Try Favorites</string>
    <string name="menu_lucky">I feel lucky</string>
    <string name="menu_bottles">Setup bottles</string>
    <string name="menu_mobile">Mobile orders</string>
    <string name="menu_options">Options and Setup</string>

    <!-- Options Activity -->
    <string name="options_bottle_setup_button">Bottle Setup</string>
    <string name="options_recipe_setup_button">Recipe Setup</string>
    <string name="options_extra_setup_button">External Ingredient Setup</string>
    <string name="options_lights_button">Lights Show</string>
    <string name="options_demo_button">Demo mode</string>
    <string name="options_party_setup">Party setup</string>
    <string name="options_advanced_button">Advanced Setup</string>
    <string name="options_about_button">Update</string>
    <string name="options_turn_off_button">Homing</string>

    <!-- Create Activity -->
    <string name="create_pour_button">Start!</string>
    <string name="create_clear_button">Clear</string>
    <string name="create_add_button">Give it a name and save</string>

    <!-- Recipe Setup -->
    <string name="recipe_add_new_button">Add New</string>
    <string name="add_recipe">Add new recipe</string>
    <string name="remove_recipe">Remove recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="remove_ingredients">Remove all ingredients</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="title_activity_outside_component">Outside Components</string>
    <string name="title_activity_product">Product Activity</string>
    <string name="title_activity_creator">Drink Creator</string>

    <!-- Product Setup -->
    <string name="product_add_new_button">Add New</string>
    <string name="product_button_cancel">Cancel</string>
    <string name="product_button_empty">Empty</string>
    <string name="product_button_ok">OK</string>
    <string name="product_field_type"></string>
    <string name="product_field_liquid"></string>
    <string name="product_field_capacity"></string>
    <string name="product_liquid_label">Liquids</string>
    <string name="product_type_label">Types</string>
    <string name="product_capacity_label">Capacities</string>
    <string name="image_desc">[Drink Image]</string>
    <string name="title_activity_random">Get Random</string>
    <string name="title_activity_options">Options and Setup</string>
    <string name="reload_drinks_progress_title">Refreshing...</string>
    <string name="reload_drinks_progress_message">Refreshing drink recipes</string>

    <!-- Progress Bars -->
    <string name="progress_bar_sweet_name">Sweet</string>
    <string name="progress_bar_sour_name">Sour</string>
    <string name="progress_bar_bitter_name">Bitter</string>
    <string name="progress_bar_strength_name">Strength</string>
    <string name="options_calibrate">Calibration</string>
    <string name="options_stop">Stop</string>
    <string name="title_activity_wizard_start">Start Wizard</string>
    <string name="unlock">Unlock</string>
    <string name="add_recipe_btn">Add new recipe</string>
    <string name="remove_recipe_btn">Delete selected recipe</string>
    <string name="change_photo_btn">Change photo TODO</string>
    <string name="change_name_btn">Change name</string>
    <string name="goto_main_menu">Main menu</string>
    <string name="goto_back">Back</string>
    <string name="myip">Show device address</string>
    <string name="update_title">Barobot Software Update</string>
    <string name="update_msg">New Barobot Software version was released. It is strongly recommended that you apply this update as soon as possible. Don\'t do it during a party. Do you want to download it now? \n\n(destination folder: /mnt/internal_sd/Download/Barobot_update.apk)</string>
    <string name="update_yes">Yes</string>
    <string name="update_no">No</string>
    <string name="title_activity_validator">ValidatorActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_power">Power tests</string>
    <string name="title_activity_sensors">Sensors tests</string>
    <string name="title_activity_calibration">Calibration</string>
    <string name="title_activity_servos">Left - right movement test</string>
    <string name="title_activity_firmware">Software update</string>
    <string name="title_activity_servo_z">Servo up-down</string>
    <string name="title_activity_servo_y">Servo front - back</string>
    <string name="title_activity_weight_sensor">Weigh sensor calibration</string>
    <string name="wizard_other_tests">or  jump to the specific test</string>
    <string name="startup_head">Barobot v</string>
    <string name="startup_loading">Loading...</string>
    <string name="startup_version">.</string>
    <string name="preparing_drink_title">Preparing drink...</string>
    <string name="preparing_drink_message">Please wait</string>
    <string name="update_manual_message">Please turn OFF an ON Barobot.</string>
    <string name="update_manual_title">Uploading firmware...</string>
    <string name="preparing_drink_start">START</string>
    <string name="preparing_drink_cancel">Anuluj</string>
    <string name="firmware_uploading_in_progress">Uploading in progress. Don\'t touch Barobot. Don\'t unplug anything before done.</string>
    <string name="firmware_uploading_title">Uploading firmware...</string>
    <string name="title_activity_hall_y">HallYActivity</string>
    <string name="dialog_recipe_options_title">Recipe options</string>
    <string name="are_you_sure_delete_drink">Are you sure you want to delete this drink?</string>

    <array name="recipe_option">
        <item>Edit recipe...</item>
        <item>Hide recipe</item>
        <item>Delete recipe...</item>
        <item>Cancel</item>
    </array>

    <string name="do_you_want_enable_wifi">Do you want to enable WIFI and chack again?</string>
    <string name="upload_firmware_success">It is pleasure to inform that operation was completed successfully.</string>
    <string name="title_activity_debug_input">Debug Input</string>

</resources>
