<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        >

        <Button
            android:id="@+id/options_bottle_setup_button"
            style="@style/OptionsMenuButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_bottle_setup_button" />

        <Button
            android:id="@+id/options_recipe_setup_button"
            style="@style/OptionsMenuButton"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/options_bottle_setup_button"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_recipe_setup_button" />

        <Button
            android:id="@+id/options_extra_setup_button"
            style="@style/OptionsMenuButton"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/options_recipe_setup_button"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_extra_setup_button" />

        <ToggleButton
            android:id="@+id/options_lights_button"
            style="@style/OptionsMenuButton"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/options_bottle_setup_button"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_lights_button"
            android:textOff="@string/options_lights_button"
            android:textOn="@string/options_lights_button" />

        <Button
            android:id="@+id/options_demo_button"
            style="@style/OptionsMenuButton"
            android:layout_below="@id/options_lights_button"
            android:layout_toRightOf="@id/options_bottle_setup_button"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_demo_button" />

        <Button
            android:id="@+id/options_advanced_button"
            style="@style/OptionsMenuButton"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/options_lights_button"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_advanced_button" />

        <Button
            android:id="@+id/options_about_button"
            style="@style/OptionsMenuButton"
            android:layout_below="@id/options_demo_button"
            android:layout_toRightOf="@id/options_lights_button"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_about_button" />

        <Button
            android:id="@+id/options_turn_off_button"
            style="@style/OptionsMenuButton"
            android:layout_below="@id/options_demo_button"
            android:layout_toRightOf="@id/options_bottle_setup_button"
            android:layout_margin="@dimen/OptionsMenuButtonMargin"
             android:onClick="onOptionsButtonClicked"
            android:text="@string/options_turn_off_button" />

        <Button
            android:id="@+id/options_calibrate_button"
            style="@style/OptionsMenuButton"
            android:layout_below="@id/options_bottle_setup_button"
            android:layout_toRightOf="@+id/options_demo_button"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_calibrate" />

        <Button
            android:id="@+id/options_stop"
            style="@style/OptionsMenuButton"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/options_extra_setup_button"
            android:layout_marginTop="24dp"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/options_stop" />

        <Button
            android:id="@+id/settings_unlock"
            style="@style/OptionsMenuButton"
            android:layout_below="@+id/options_turn_off_button"
            android:layout_toRightOf="@+id/options_stop"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/unlock" />

        <Button
            android:id="@+id/option345"
            style="@style/OptionsMenuButton"
            android:layout_below="@+id/options_about_button"
            android:layout_toRightOf="@+id/settings_unlock"
            android:onClick="onOptionsButtonClicked"
            android:text="@string/myip" />

    </RelativeLayout>


</RelativeLayout>