<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:components="http://schemas.android.com/apk/res/com.barobot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/ingredient_list_bg"
    android:orientation="vertical" >

    <com.barobot.gui.TextProgressBar
        android:id="@+id/progress_bar_sweet"
        style="@style/ProgressBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progress_bar_sweet"
        components:text="@string/progress_bar_sweet_name" />
    
    <com.barobot.gui.TextProgressBar
        android:id="@+id/progress_bar_sour"
        style="@style/ProgressBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progress_bar_sour"
        components:text="@string/progress_bar_sour_name" />
    
    <com.barobot.gui.TextProgressBar
        android:id="@+id/progress_bar_bitter"
        style="@style/ProgressBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progress_bar_bitter"
        components:text="@string/progress_bar_bitter_name" />
    
    <com.barobot.gui.TextProgressBar
        android:id="@+id/progress_bar_strength"
        style="@style/ProgressBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progress_bar_strength"
        components:text="@string/progress_bar_strength_name" />

</LinearLayout>