<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".CreatorActivity" >
    
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.65" >

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/top_bottle_shelf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/bottle_button1"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button3"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button5"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button7"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button9"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button11"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/bottom_bottle_shelf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp" >

                        <TextView
                            android:id="@+id/bottle_button2"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button4"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button6"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button8"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button10"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />

                        <TextView
                            android:id="@+id/bottle_button12"
                            style="@style/BottleButtonCreator"
                            android:onClick="onBottleClicked" />
                    </LinearLayout>
                </LinearLayout>
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <fragment
                        android:id="@+id/fragment_attributes"
                        android:name="com.barobot.gui.fragment.RecipeAttributesFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        tools:layout="@layout/fragment_recipe_attributes" />
                    
                    <Button
                        style="@style/ButtonRed"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="gotoMainMenu"
                        android:text="@string/goto_main_menu" />
   
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/creator_pour_button"
                        style="@style/ButtonGreen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onPourRecipeButtonClicked"
                        android:text="@string/create_pour_button" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:orientation="vertical" >

<TextView
    android:id="@+id/drink_size"
    style="@style/TextBox"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/goto_main_menu"
    android:background="@drawable/ingredient_list_bg"
    android:gravity="center_vertical|center_horizontal"
    android:textSize="20sp" />

                    <fragment
                        android:id="@+id/fragment_ingredient_list"
                        android:name="com.barobot.gui.fragment.IngredientListFragment"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        tools:layout="@layout/fragment_ingredient_list" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >
 
                   <Button
                        android:id="@+id/clear_list"
                        style="@style/ButtonRed"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClearButtonClicked"
                        android:text="@string/create_clear_button" />

                    <Button
                        android:id="@+id/save_as_drink"
                        style="@style/ButtonBlue"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:onClick="onAddRecipeButtonClicked"
                        android:text="@string/create_add_button" />
                    

                    <Button
                        style="@style/ButtonBlue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onAddRecipeButtonClicked"
                        android:text="@string/create_add_button" />

                    <Button
                        
                        style="@style/ButtonRed"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClearButtonClicked"
                        android:text="@string/create_clear_button" />
                    
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>
